src/objects/ffr__SummarizationTemplate__c.object
<CustomObject>
    <customHelpPage>ffr__helpsummarizationtemplate</customHelpPage>
    <description>Stores settings to use for data summarization.</description>
    <fields>
        <fullName>ffr__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ffr__BasePeriod__c</fullName>
        <label>Base Period</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>ffr__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>SummarizationTemplates</relationshipLabel>
        <relationshipName>SummarizationTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__Destination__c</fullName>
        <description>The destination SObject, i.e. the table in which the summarization template is held.</description>
        <label>Destination</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Filter</label>
        <referenceTo>ffr__Filter__c</referenceTo>
        <relationshipLabel>SummarizationTemplates</relationshipLabel>
        <relationshipName>SummarizationTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__LastSuccessfulBuild__c</fullName>
        <label>Last Successful Build</label>
        <summarizedField>ffr__SummarizationRunInformation__c.ffr__EndTime__c</summarizedField>
        <summaryForeignKey>ffr__SummarizationRunInformation__c.ffr__SummarizationTemplate__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffr__NotificationType__c</fullName>
        <formula>IF(AND(ffr__TotalNumberOfErrors__c=0,ffr__TotalNumberOfAborts__c=0,ffr__TotalNumberOfExternal__c=0),
&apos;Successful&apos;,
IF(ffr__TotalNumberOfErrors__c = ffr__TotalNumberOfLogs__c,
&apos;Failure&apos;,
IF(ffr__TotalNumberOfAborts__c &gt; 0,
&apos;Failure&apos;,
IF( ffr__TotalNumberOfExternal__c &gt; 0,
&apos;Failure&apos;,
&apos;Mixed&apos;
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__ObjectToObjectMap__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The object to object map that this summarization template is based on.</description>
        <label>ObjectToObjectMap</label>
        <referenceTo>ffr__ObjectToObjectMap__c</referenceTo>
        <relationshipLabel>SummarizationTemplates</relationshipLabel>
        <relationshipName>SummarizationTemplates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__SourceDataview__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The dataview that acts as the source of the field names for this summarization template.</description>
        <label>Dataview</label>
        <referenceTo>ffr__DataView__c</referenceTo>
        <relationshipLabel>Su</relationshipLabel>
        <relationshipName>SummarizationTemplates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__TotalNumberOfAborts__c</fullName>
        <label>Total Number of Aborts</label>
        <summaryFilterItems>
            <field>ffr__SummarizationLog__c.ffr__LogType__c</field>
            <operation>equals</operation>
            <value>Abort</value>
        </summaryFilterItems>
        <summaryForeignKey>ffr__SummarizationLog__c.ffr__SummarizationTemplate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffr__TotalNumberOfErrors__c</fullName>
        <label>Total Number of Errors</label>
        <summaryFilterItems>
            <field>ffr__SummarizationLog__c.ffr__LogType__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </summaryFilterItems>
        <summaryForeignKey>ffr__SummarizationLog__c.ffr__SummarizationTemplate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffr__TotalNumberOfExternal__c</fullName>
        <label>Total Number of External</label>
        <summaryFilterItems>
            <field>ffr__SummarizationLog__c.ffr__LogType__c</field>
            <operation>equals</operation>
            <value>External</value>
        </summaryFilterItems>
        <summaryForeignKey>ffr__SummarizationLog__c.ffr__SummarizationTemplate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffr__TotalNumberOfLogs__c</fullName>
        <label>Total Number of Logs</label>
        <summaryForeignKey>ffr__SummarizationLog__c.ffr__SummarizationTemplate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ffr__UseCurrentPeriod__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DEPRECATED:Current Period as Base Period</label>
        <type>Checkbox</type>
    </fields>
    <label>Summarization Template</label>
    <listViews>
        <fullName>ffr__All</fullName>
        <columns>NAME</columns>
        <columns>ffr__SourceDataview__c</columns>
        <columns>ffr__Status__c</columns>
        <columns>ffr__LastSuccessfulBuild__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Summarization Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>